# PythonTemplates

./: .gitignore  README.md  pyproject.toml  requirements.txt
engineering_framework/backend/auth/: README.md  config.py  core.py  interfaces.py
engineering_framework/backend/job_queue/: README.md  config.py  core.py  interfaces.py
engineering_framework/backend/middleware/: README.md  config.py  core.py  interfaces.py
engineering_framework/backend/request_validation/: README.md  config.py  core.py  interfaces.py
engineering_framework/backend/rest_api/: README.md  config.py  core.py  interfaces.py
engineering_framework/backend/service_layer/: README.md  config.py  core.py  interfaces.py
engineering_framework/core/caching/: README.md  config.py  core.py  interfaces.py
engineering_framework/core/config_manager/: README.md  config.py  core.py  interfaces.py
engineering_framework/core/dependency_injection/: README.md  config.py  core.py  interfaces.py
engineering_framework/core/env_manager/: README.md  config.py  (+2 more)
tests/: __init__.py  test_automated_testing.py  test_data_analytics.py  test_data_cleanup.py  test_utilities.py
wingbrace/: __init__.py
wingbrace/automated_testing/: __init__.py  api_test_helper.py  base_test.py  performance_test.py  test_data_factory.py
wingbrace/data_analytics/: __init__.py  anomaly_detector.py  data_analyzer.py  report_generator.py
wingbrace/data_cleanup/: __init__.py  data_cleaner.py  data_transformer.py  data_validator.py
wingbrace/utilities/: __init__.py  config_manager.py  database_helper.py  file_handler.py  logger.py
(+194 files in other folders)
