[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wingbrace-templates"
version = "1.0.0"
description = "Reusable Python template modules for QA Engineering — automated testing, data cleanup, and data analytics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wingbrace QA Engineering" }]
keywords = ["qa", "testing", "automation", "data-quality", "analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

# All dependencies below are optional to keep the core dependency-free.
# Install extras as needed.
dependencies = []

[project.optional-dependencies]
yaml   = ["pyyaml>=6.0"]
excel  = ["openpyxl>=3.1"]
full   = ["pyyaml>=6.0", "openpyxl>=3.1"]
dev    = ["pytest>=7.0", "pytest-cov>=4.0", "pyyaml>=6.0", "openpyxl>=3.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["wingbrace*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"
norecursedirs = ["wingbrace", ".git", "dist", "build"]

[tool.coverage.run]
source = ["wingbrace"]
omit   = ["tests/*"]
